# serializer version: 1
# name: TestCreateGroup.test_ok_and_duplicate[obj]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'legacy_id': None,
    'modify': False,
    'modify_otu': True,
    'name': 'haematologists',
  })
# ---
# name: TestCreateUser.test_ok[reference]
  dict({
    'archived': False,
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'data_type': <ReferenceDataType.genome: 'genome'>,
    'description': '',
    'groups': list([
    ]),
    'id': 1,
    'imported_from': None,
    'latest_build': None,
    'name': 'Example',
    'organism': '',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'task': None,
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
      }),
      dict({
        'build': True,
        'created_at': datetime.datetime(2015, 10, 6, 20, 0),
        'handle': 'zclark',
        'id': 2,
        'modify': False,
        'modify_otu': True,
      }),
    ]),
  })
# ---
# name: TestCreateUser.test_ok[user_obj]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 2,
    'modify': False,
    'modify_otu': True,
  })
# ---
# name: TestUpdateGroup.test_ok[obj]
  dict({
    'build': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'id': 1,
    'legacy_id': None,
    'modify': True,
    'modify_otu': True,
    'name': 'haematologists',
  })
# ---
# name: TestUpdateUser.test_ok[obj_1]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 2,
    'modify': False,
    'modify_otu': False,
  })
# ---
# name: TestUpdateUser.test_ok[obj_2]
  dict({
    'build': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'handle': 'zclark',
    'id': 2,
    'modify': True,
    'modify_otu': True,
  })
# ---
